<resources>
    <string name="app_name">Basketball Counter</string>
    <string name="button_three_points">+3 POINTS</string>
    <string name="button_two_points">+2 POINTS</string>
    <string name="button_free_throw">FREE THROW</string>
    <string name="button_fouls">FOULS</string>
    <string name="button_violations">VIOLATIONS</string>
    <string name="button_reset">RESET</string>
    <string name="start_value">0</string>
    <string name="name_team_a">Team A</string>
    <string name="name_team_b">Team B</string>
</resources>
