<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/lay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/name_team_a"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="end"
                    android:text="@string/start_value"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="45sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/holo_orange_dark"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/button_three_points"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_orange_dark"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/button_two_points"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/holo_orange_dark"
                    android:onClick="addOneForTeamA"
                    android:text="@string/button_free_throw"
                    android:textColor="@android:color/background_light" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/name_team_b"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="end"
                    android:text="@string/start_value"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="45sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/holo_red_light"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/button_three_points"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@android:color/holo_red_light"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/button_two_points"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/holo_red_light"
                    android:onClick="addOneForTeamB"
                    android:text="@string/button_free_throw"
                    android:textColor="@android:color/background_light" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal"
            android:layout_below="@+id/lay1"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_marginTop="1.5dp">

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/start_value"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="3"
                    android:background="@android:color/holo_orange_dark"
                    android:onClick="addFoulsForTeamA"
                    android:text="@string/button_fouls"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_marginTop="1.5dp">

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/start_value"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="3"
                    android:background="@android:color/holo_red_light"
                    android:onClick="addFoulsForTeamB"
                    android:text="@string/button_fouls"
                    android:textColor="@android:color/background_light" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal"
            android:layout_below="@+id/lay2"
            android:layout_above="@+id/bt"

            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_marginTop="1.5dp">

                <TextView
                    android:id="@+id/team_a_violations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/start_value"
                    android:textAlignment="center"

                    android:textSize="20sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="3"
                    android:onClick="addViolationsForTeamA"
                    android:text="@string/button_violations"
                    android:textColor="@android:color/background_light"
                    android:background="@android:color/holo_orange_dark"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:orientation="vertical"
                android:padding="5dp"
                android:layout_marginTop="1.5dp">

                <TextView
                    android:id="@+id/team_b_violations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_horizontal"
                    android:text="@string/start_value"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_weight="3"
                    android:onClick="addViolationsForTeamB"
                    android:text="@string/button_violations"
                    android:textColor="@android:color/background_light"
                    android:background="@android:color/holo_red_light" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lay3"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="27dp"
            android:background="@android:color/holo_green_light"
            android:onClick="resetScores"
            android:padding="10dp"
            android:text="@string/button_reset"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>
    </ScrollView>
